--- a/test/WindowSignUp.xaml
+++ b/test/WindowSignUp.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test"
         mc:Ignorable="d"
-        Title="WindowSignUp" Height="600" Width="600" RenderTransformOrigin="0.5,0.5" WindowStartupLocation="CenterScreen" >
+        Title="WindowSignUp" Height="600" Width="600" RenderTransformOrigin="0.5,0.5" WindowStartupLocation="CenterScreen" MouseLeftButtonDown="Window_MouseLeftButtonDown">
+    <WindowChrome.WindowChrome>
+        <WindowChrome GlassFrameThickness="0" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="5" />
+    </WindowChrome.WindowChrome>
     <Window.RenderTransform>
         <TransformGroup>
             <ScaleTransform/>
@@ -17,61 +20,75 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="6*"/>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="0.6*"/>
             <RowDefinition Height="50"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
-        <StackPanel Background="Yellow" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" Grid.RowSpan="15"/>
+        <Grid.Background>
+            <ImageBrush Stretch="Fill" ImageSource="Resources/bg.PNG" AlignmentY="Center" AlignmentX="Center" />
+        </Grid.Background>
+        <Border Grid.Column="1" Grid.Row="2" Grid.RowSpan="13" Grid.ColumnSpan="3" CornerRadius="4" Background="#12223a"/>
+        
+        <Label Content="회원가입을 환영합니다" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="1" Background="Transparent" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="맑은고딕" Foreground="White" />
+        <Button Name ="Close" Grid.Column="4" Grid.Row="0"  HorizontalAlignment="Right" VerticalAlignment="Top" Click= "Close_Click" Background="Transparent" BorderBrush="Transparent" Margin="10" Padding="0">
+            <Image Name="climg" Source="/Resources/btn_X_close.png" Stretch="None" >
+            </Image>
+        </Button>
+        
 
-        <Label Content="회원가입을 환영합니다" Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="1" Background="Transparent" FontSize="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Gungsuh"/>
+        <Label Content="ID: " Grid.Column="1" Grid.Row="3" HorizontalAlignment="Right" VerticalContentAlignment="Center" FontSize="20" FontFamily="맑은고딕" Foreground="White"/>
+        <TextBox x:Name="NIDtxt" KeyDown="NIDtxt_KeyDown" PreviewKeyDown="NIDtxt_PreviewKeyDown" Grid.Row="3" Grid.Column="2" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="40" FontFamily="맑은고딕" MaxLength="15"/>
 
+        <Label Content="비밀번호: " Grid.Column="1" Grid.Row="5" HorizontalAlignment="Right" VerticalContentAlignment="Center" FontSize="20" FontFamily="맑은고딕" Foreground="White"/>
+        <PasswordBox x:Name="NPWtxt" KeyDown="NPWtxt_KeyDown" PreviewTextInput="NPWtxt_PreviewTextInput" PreviewKeyDown="NPWtxt_PreviewKeyDown" Grid.Row="5" Grid.Column="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="40" FontFamily="맑은고딕" MaxLength="20"/>
 
-        <Label Content="ID: " Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" VerticalContentAlignment="Center" FontSize="20" FontFamily="Gungsuh"/>
-        <TextBox x:Name="NIDtxt" KeyDown="NIDtxt_KeyDown" PreviewKeyDown="NIDtxt_PreviewKeyDown" Grid.Row="3" Grid.Column="2" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="40" FontFamily="Gungsuh" MaxLength="15"/>
+        <Label Content="이름:" Grid.Column="1" Grid.Row="7" HorizontalAlignment="Right" VerticalContentAlignment="Center" FontSize="20" FontFamily="맑은고딕" Foreground="White"/>
+        <TextBox x:Name="NNtxt" KeyDown="NNtxt_KeyDown" PreviewKeyDown="NNtxt_PreviewKeyDown" Grid.Row="7" Grid.Column="2" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="40" FontFamily="맑은고딕" MaxLength="10"/>
 
-        <Label Content="비밀번호: " Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" VerticalContentAlignment="Center" FontSize="20" FontFamily="Gungsuh" />
-        <PasswordBox x:Name="NPWtxt" KeyDown="NPWtxt_KeyDown" PreviewTextInput="NPWtxt_PreviewTextInput" PreviewKeyDown="NPWtxt_PreviewKeyDown" Grid.Row="5" Grid.Column="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="40" FontFamily="Gungsuh" MaxLength="20"/>
+        <Label Content="나이: " Grid.Column="1" Grid.Row="9" HorizontalAlignment="Right" VerticalContentAlignment="Center" FontSize="20" FontFamily="맑은고딕" Foreground="White"/>
+        <TextBox x:Name="NAtxt" KeyDown="NAtxt_KeyDown" PreviewTextInput="NAtxt_PreviewTextInput" PreviewKeyDown="NAtxt_PreviewKeyDown" Grid.Row="9" Grid.Column="2" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="40" FontFamily="맑은고딕" MaxLength="4"/>
 
-        <Label Content="이름:" Grid.Column="1" Grid.Row="7" HorizontalAlignment="Center" VerticalContentAlignment="Center" FontSize="20" FontFamily="Gungsuh"/>
-        <TextBox x:Name="NNtxt" KeyDown="NNtxt_KeyDown" PreviewKeyDown="NNtxt_PreviewKeyDown" Grid.Row="7" Grid.Column="2" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="40" FontFamily="Gungsuh" MaxLength="10"/>
-
-        <Label Content="나이: " Grid.Column="1" Grid.Row="9" HorizontalAlignment="Center" VerticalContentAlignment="Center" FontSize="20" FontFamily="Gungsuh"/>
-        <TextBox x:Name="NAtxt" KeyDown="NAtxt_KeyDown" PreviewTextInput="NAtxt_PreviewTextInput" PreviewKeyDown="NAtxt_PreviewKeyDown" Grid.Row="9" Grid.Column="2" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="40" FontFamily="Gungsuh" MaxLength="4"/>
-
-        <Label Content="약관 동의 " Grid.Column="1" Grid.Row="11" HorizontalAlignment="Center" VerticalContentAlignment="Center" FontSize="20" FontFamily="Gungsuh"/>
-        <Button Content="약관 동의 읽어보기" Grid.Column="2" Grid.Row="11" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Background="OrangeRed" Width="600" Height="80" Click="Button_Click" FontFamily="Gungsuh"/>
-        <CheckBox x:Name="AgreeCheck" Checked="Agree" Unchecked="DisAgree" Grid.Row="11" Grid.Column="3" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Gray" Margin="10,0,0,0"  >
+        <Label Content="약관 동의 " Grid.Column="1" Grid.Row="11" HorizontalAlignment="Center" VerticalContentAlignment="Center" FontSize="20" FontFamily="맑은고딕" Foreground="White"/>
+        <Button Content="약관 동의 읽어보기" Grid.Column="2" Grid.Row="11" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Background="#17253a" Click="Button_Click" FontFamily="맑은고딕" Foreground="white" BorderBrush="White" BorderThickness="2" Height="40" Width="200" >
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="5"/>
+                </Style>
+            </Button.Resources>
+        </Button>
+        <CheckBox x:Name="AgreeCheck" Checked="Agree" Unchecked="DisAgree" Grid.Row="11" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Background="White" Margin="10,0,0,0"  >
             <CheckBox.LayoutTransform>
                 <ScaleTransform ScaleX="2" ScaleY="2" />
             </CheckBox.LayoutTransform>
         </CheckBox>
 
-        <Button Grid.Column="2" Grid.Row="13" Click="Button_Click_1" Content="등록 완료" FontSize="20" FontFamily="Gungsuh" BorderThickness="2" BorderBrush="White">
+        <Button Grid.Column="2" Grid.Row="13" Click="Button_Click_1" Content="등록 완료" FontSize="20" FontFamily="맑은고딕" BorderThickness="2" BorderBrush="White" Background="#12225a" Foreground="White">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="10"/>
                 </Style>
             </Button.Resources>
         </Button>
-
+        <Image Grid.Column="1" Grid.Row="15" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="None" Margin="10" Source="Resources/greentech_logo.png"/>
 
     </Grid>
 </Window>
