--- a/test/Userpage.xaml
+++ b/test/Userpage.xaml
@@ -6,59 +6,67 @@
       xmlns:local="clr-namespace:test"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="550"
-      Title="Userpage" Height="450" Width="550" >
+      Title="Userpage" Height="AUTO" Width="AUTO" >
+    
 
     <Grid ShowGridLines="False">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="60"/>
             <ColumnDefinition Width="130"/>
             <ColumnDefinition Width="130"/>
+            <ColumnDefinition Width="60"/>
             <ColumnDefinition Width="*"/>
-            
+
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="60"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="40"/>
-            <RowDefinition Height="50"/>
             <RowDefinition Height="40"/>
-            <RowDefinition Height="80"/>
+            <RowDefinition Height="90"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
-        <StackPanel Background="DarkRed" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" Grid.RowSpan="8"/>
-        <Label Content="회원정보 수정" Grid.Column="0" Grid.ColumnSpan="5" Grid.Row="0" Background="Yellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="25" FontFamily="Gungsuh" />
-        <Button Grid.Column="4" Grid.Row="0" Width="20" Height="20" HorizontalAlignment="right" Margin="20" Click="Close_Click"/>
+        <Grid.Background>
+            <ImageBrush Stretch="Fill" ImageSource="Resources/bg.PNG" AlignmentY="Center" AlignmentX="Center" />
+        </Grid.Background>
+        <Border Grid.Column="1" Grid.Row="1" Grid.RowSpan="6" Grid.ColumnSpan="4" CornerRadius="4" Background="#12223a"/>
+        <Label Content="회원정보 수정" Grid.Column="0" Grid.ColumnSpan="6" Grid.Row="0"  HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="30" FontFamily="맑은고딕" Foreground="white" Margin="10"/>
+        <Button Grid.Column="5" Grid.Row="0" Click="Close_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" Background="Transparent" BorderBrush="Transparent">
+            <Image Source="Resources/btn_X_close.png" Stretch="None"/>
 
 
+        </Button>
 
+        <Label Content="기존 회원 정보" Grid.Column="2" Grid.Row="1" Background="#12223a" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="18" FontFamily="맑은고딕" Foreground="White" />
+        <Label Content="ID:" Grid.Column="1" Grid.Row="2" Background="#12223a" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="맑은고딕" Foreground="White" />
+        <TextBox x:Name="ID" Grid.Column="2" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="맑은고딕" IsEnabled="False" />
+        <Label Content="PW:" Grid.Column="1" Grid.Row="3" Background="#12223a" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="맑은고딕" Foreground="White" />
+        <TextBox x:Name="PW" Grid.Column="2" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="맑은고딕" IsEnabled="False" />
+        <Label Content="이름:" Grid.Column="1" Grid.Row="4" Background="#12223a" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="맑은고딕" Foreground="White" />
+        <TextBox x:Name="N" Grid.Column="2" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="맑은고딕" IsEnabled="False" />
+        <Label Content="나이:" Grid.Column="1" Grid.Row="5" Background="#12223a" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="맑은고딕" Foreground="White"/>
+        <TextBox x:Name="A" Grid.Column="2" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="맑은고딕" IsEnabled="False" />
 
-        <Label Content="기존 회원 정보" Grid.Column="2" Grid.Row="1" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" FontFamily="Gungsuh" />
-         <Label Content="ID:" Grid.Column="1" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="Gungsuh" />
-        <TextBox x:Name="ID" Grid.Column="2" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" />
-        <Label Content="PW:" Grid.Column="1" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="Gungsuh"/>
-        <TextBox x:Name="PW" Grid.Column="2" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" />
-        <Label Content="이름:" Grid.Column="1" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="Gungsuh" />
-        <TextBox x:Name="N" Grid.Column="2" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" />
-        <Label Content="나이:" Grid.Column="1" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="18" FontFamily="Gungsuh"/>
-        <TextBox x:Name="A" Grid.Column="2" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" />
+        <Label Content="변경 회원 정보" Grid.Column="3" Grid.Row="1" Background="#12223a" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="18" FontFamily="맑은고딕" Foreground="White" />
+        <TextBox x:Name="NID" KeyDown="NID_KeyDown" Grid.Column="3" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="맑은고딕" MaxLength="15" IsEnabled="False" />
+        <TextBox x:Name="NPW" KeyDown="NPW_KeyDown" PreviewKeyDown="NPW_PreviewKeyDown" PreviewTextInput="NPW_PreviewTextInput" Grid.Column="3" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="맑은고딕" MaxLength="20"/>
+        <TextBox x:Name="NN" KeyDown="NN_KeyDown" PreviewKeyDown="NN_PreviewKeyDown" PreviewTextInput="NN_PreviewTextInput" Grid.Column="3" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="맑은고딕"  MaxLength="10"/>
+        <TextBox x:Name="NA" KeyDown="NA_KeyDown" PreviewKeyDown="NA_PreviewKeyDown" PreviewTextInput="NA_PreviewTextInput" Grid.Column="3" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="맑은고딕" MaxLength="4" />
 
-        <Label Content="변경 회원 정보" Grid.Column="3" Grid.Row="1" Background="LightGoldenrodYellow" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="18" FontFamily="Gungsuh" />
-        <TextBox x:Name="NID" KeyDown="NID_KeyDown" Grid.Column="3" Grid.Row="2" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" MaxLength="15"/>
-        <TextBox x:Name="NPW" KeyDown="NPW_KeyDown" PreviewKeyDown="NPW_PreviewKeyDown" PreviewTextInput="NPW_PreviewTextInput" Grid.Column="3" Grid.Row="3" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" MaxLength="20"/>
-        <TextBox x:Name="NN" KeyDown="NN_KeyDown" PreviewKeyDown="NN_PreviewKeyDown" PreviewTextInput="NN_PreviewTextInput" Grid.Column="3" Grid.Row="4" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh"  MaxLength="10"/>
-        <TextBox x:Name="NA" KeyDown="NA_KeyDown" PreviewKeyDown="NA_PreviewKeyDown" PreviewTextInput="NA_PreviewTextInput" Grid.Column="3" Grid.Row="5" Background="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" FontSize="18" FontFamily="Gungsuh" MaxLength="4" />
-
-        <Button Content="정보 수정 요청" Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="3" Background="Red" FontSize="30" FontFamily="Gungsuh" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Click="Edit_Click" Margin="10" BorderThickness="5" BorderBrush="Crimson">
+        <Button Content="정보 수정 요청" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="2" Background="#12225a" FontSize="25" FontFamily="맑은고딕" VerticalAlignment="Top" HorizontalAlignment="Center" Click="Edit_Click" Margin="10" BorderThickness="2" BorderBrush="White" Foreground="White" >
           <Button.Resources>
                 <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="30"/>
+                    <Setter Property="CornerRadius" Value="10"/>
                 </Style>
             </Button.Resources>
         </Button>
 
-        <Button Grid.Column="0" Grid.Row="0" Background="Gray" Click="Button_Click" Width="20" Height="20" VerticalAlignment="Center" Margin="0,0,50,0"/>
+        <Button Grid.Column="0" Grid.Row="0" Background="Gray" Click="Button_Click" Width="15" Height="15" Margin="10" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Image Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="4" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="None"  Source="Resources/greentech_logo.png" Margin="10"/>
+
+        
     </Grid>
 </Page>
