10/11 WPF에서 데이터 그리드와 차트를 만들어 DB 내 테이블과 데이터바인딩을 시키는 작업을 진행했습니다.
 - Tibero에서 기존 테이블 내 대용량 데이터를 복사해 가져옴.

 - 테이블을 복사하고 붙여넣는 과정에서 원하는 형식으로 일부 변경 및 삭제 진행.

 - 변경한 테이블을 데이터 그리드와 데이터 바인딩을 진행.

 SQL 문법을 이용해 데이터 그리드와 데이터 바인딩을 진행하고, DB 내 테이블에서도 여러가지 기능을 익혔습니다. 다만 데이터 그리드를 다루는데 있어 아직 미숙하기 때문에 더 익힌 다음에 차트로 넘어갈 예정입니다.

 테이블이 데이터 바인딩된 데이터 그리드 내에 컬럼의 구조를 바꾸고, 글자들과 숫자들의 위치를 바꾸는 작업에 있었습니다.

--- a/test/Chart_DataGrid.xaml
+++ b/test/Chart_DataGrid.xaml
@@ -5,30 +5,57 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test"
         mc:Ignorable="d"
-        Title="Chart_DataGrid" Height="450" Width="800">
-    <Grid>
+        Title="Chart_DataGrid" Height="450" Width="800" MouseLeftButtonDown="Window_MouseLeftButtonDown">
+    <WindowChrome.WindowChrome>
+        <WindowChrome GlassFrameThickness="0" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="5" />
+    </WindowChrome.WindowChrome>
+    <Grid ShowGridLines="True">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="10"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="20"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="10"/>
+            <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Row="1" Grid.Column="1">
-            <!--차드영역-->
+        <Button Name ="Close" Grid.Column="2" Grid.Row="0"  Click= "Close_Click" Background="Gray" BorderBrush="Transparent" >
+            <Image Name="climg" Source="/Resources/btn_X_close.png" Stretch="None">
+            </Image>
+        </Button>
+
+        <Border Grid.Row="2" Grid.Column="1">
+            <!--차트영역-->
             
         </Border>
 
-        <Border Grid.Row="3" Grid.Column="1">
+        <Button x:Name="btngriddata" Content="Data" Grid.Row="4" Grid.Column="1" Width="100" HorizontalAlignment="Right"/>
+
+        <Border Grid.Row="5" Grid.Column="1">
             <!--데이터그리드영역-->
-            <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}"/>
+            <DataGrid x:Name="datagrid" AutoGenerateColumns="True">
+                <DataGrid.Columns>
+                    <!--<DataGridTextColumn x:Name="블록코드"  Binding="{Binding Path='블록코드'}"/>
+                    <DataGridTextColumn x:Name="태그아이디" Binding="{Binding Path='태그아이디'}"/>
+                    <DataGridTextColumn x:Name="항목" Binding="{Binding Path='항목'}"/>
+                    <DataGridTextColumn x:Name="시간" Binding="{Binding Path='시간'}"/>
+                    <DataGridTextColumn x:Name="계측값" Binding="{Binding Path='계측값'}"/>
+                    <DataGridTextColumn x:Name="보정값" Binding="{Binding Path='보정값'}"/>-->
+                    
+                </DataGrid.Columns>
+                
+
+
+
+
+            </DataGrid>
         </Border>
 
     </Grid>
