--- a/test/Resignpage.xaml
+++ b/test/Resignpage.xaml
@@ -51,8 +51,9 @@
                 </Style>
             </Button.Resources>
         </Button>
-        
 
-        
+
+        <Frame Name="Fr" NavigationUIVisibility="Hidden"/>
+
     </Grid>
 </Page>
